# mathexpr

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  libmathexpr.pc.in  mathexpr.files
compat/: Makefile.am
include/: Makefile.am  mathexpr.h
include/mathexpr/: mathexpr.h
src/: Makefile.am  eval.c  expr.h  lexer.l
test/: Makefile.am  expr-test.c
